--- a/stylesheets/redlove/common.css
+++ b/stylesheets/redlove/common.css
@@ -1126,10 +1126,10 @@ select.error:focus {
 	Columns and Grid
 	
 	<div class="columns">
-		<div class="column p50">
+		<div class="column w50">
 			<p>Column 50%</p>
 		</div>
-		<div class="column p50">
+		<div class="column w50">
 			<p>Column 50%</p>
 		</div>
 	</div>
@@ -1137,10 +1137,10 @@ select.error:focus {
 	<div class="columns grid">
 		<h4>Two Thirds</h4>
 		<div class="column-row">
-			<div class="column f2-3">
+			<div class="column w2-3">
 				<p>Column 2/3</p>
 			</div>
-			<div class="column f1-3">
+			<div class="column w1-3">
 				<p>Column 1/3</p>
 			</div>
 		</div>
@@ -1247,6 +1247,164 @@ select.error:focus {
 		margin-left: 0;
 		margin-right: 0;
 		vertical-align: bottom;
+		width: 100% !important;
+	}
+}
+
+/* ------------------------------------------------------------
+	Flexbox Grid
+	https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+	https://css-tricks.com/using-flexbox/
+	http://flexboxgrid.com/
+	https://philipwalton.github.io/solved-by-flexbox/demos/grids/
+	
+	<div class="flex-row">
+		<div class="flex-cell w50">
+			<p>Column 50%</p>
+		</div>
+		<div class="flex-cell p50">
+			<p>Column 50%</p>
+		</div>
+	</div>
+	
+	<div class="flex-grid">
+		<div class="flex-row">
+			<h4>Two Thirds</h4>
+			<div class="flex-cell">
+				<div class="flex-cell w2-3">
+					<p>Column 2/3</p>
+				</div>
+				<div class="flex-cell w1-3">
+					<p>Column 1/3</p>
+				</div>
+			</div>
+		</div>
+	</div>
+------------------------------------------------------------ */
+
+.flex-grid,
+.flex-row,
+.flex-cell {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+/* Flexbox container */
+.flex-row {
+	/* Modern Flexbox only */
+	-webkit-align-content: stretch;
+	align-content: stretch;
+	
+	-ms-flex-align: stretch;
+	-webkit-align-items: stretch;
+	align-items: stretch;
+	
+	/* Vertical centering for legacy, horizontal centering for modern */
+	-webkit-box-pack: space-around;
+	-moz-box-pack: space-around;
+	-ms-flex-pack: space-around;
+	-webkit-justify-content: space-around;
+	justify-content: space-around;
+	
+	/* Legacy Flexbox only */
+	-webkit-box-orient: vertical;
+	-moz-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-moz-box-direction: normal;
+	
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	
+	-webkit-flex-flow: row wrap;
+	flex-flow: row wrap;
+}
+/* Flexbox item */
+.flex-cell {
+	-webkit-box-flex: 0 1 auto;
+	-moz-box-flex: 0 1 auto;
+	-webkit-flex: 0 1 auto;
+	-ms-flex: 0 1 auto;
+	flex: 0 1 auto;
+	-webkit-box-ordinal-group: 1;
+	-moz-box-ordinal-group: 1;
+	-ms-flex-order: 1;
+	-webkit-order: 1;
+	order: 1;
+}
+
+.demo .flex-cell {
+	background: #F6F6F6;
+}
+.demo .flex-cell p {
+	background: #EEEEEE;
+	-webkit-border-radius: 4px;
+	-khtml-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	margin: 0.25em;
+	padding: 0.25em;
+	text-align: center;
+}
+
+/* Alignment per row */
+.flex-row--bottom {
+	-ms-flex-align: flex-end;
+	-webkit-align-items: flex-end;
+	align-items: flex-end;
+}
+.flex-row--center {
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+}
+.flex-row--top {
+	-ms-flex-align: flex-start;
+	-webkit-align-items: flex-start;
+	align-items: flex-start;
+}
+
+/* Alignment per cell */
+.flex-cell--bottom {
+	-webkit-align-self: flex-end;
+	align-self: flex-end;
+}
+.flex-cell--center {
+	-webkit-align-self: center;
+	align-self: center;
+}
+.flex-cell--top {
+	-webkit-align-self: flex-start;
+	align-self: flex-start;
+}
+
+/* 
+	Flexbox Grid - Grid and gutter spacing
+---------------------------------------- */
+
+.flex-grid .flex-row {
+	margin-left: -1.0em;
+	margin-right: -1.0em;
+}
+.flex-grid .flex-cell {
+	border: 0 solid transparent;
+	border-width: 0 1.0em;
+}
+
+/* 
+	Flexbox Grid - Responsive formatting
+---------------------------------------- */
+/* Mobile (Portrait) : Design for a width of 320px (0px - 479px) */
+@media only screen and (max-width: 29.99em) {
+	/* Turn columns into rows */
+	.flex-row {
+		-webkit-flex-flow: column wrap;
+		flex-flow: column wrap;
+	}
+	.flex-cell {
 		width: 100% !important;
 	}
 }
